Última atualização (final) 27/06/2025

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editor de Imagem com Efeito Pixel</title>
+    <title>Codificador da Noimo</title>
     <link rel="stylesheet" href="../styles/style2.css">
+    <link rel="icon" href="../svg/logo.png" type="image/png">
 </head>
 <body>
-    <h1>Editor de Imagem com Efeito Pixel</h1>
+
+    <div class="titulo">
+        <img src="../svg/logo.png" alt="">
+        <h1>Codificador da Noimo</h1>
+    </div>
+   
     
     <div class="input-group">
         <input type="file" id="image-input" accept="image/*">
